--- a/data/buffs.yml
+++ b/data/buffs.yml
@@ -48,6 +48,20 @@ buffs:
       stackable: true
       parent:
 #
+    - id: 'buff_advanced_water_trading'
+      name: 'Advanced Water Trading'
+      description: 'Increases the trade ship production by <lightgreen>35%<r>'
+      value: '0.35'
+      stackable: false
+      parent:
+#
+    - id: 'buff_feeding'
+      name: 'Feeding'
+      description: 'Increases the fishery production by <lightgreen>50%<r> <gold>Stackable<r>'
+      value: '0.5'
+      stackable: true
+      parent:
+#
     - id: 'buff_barricade'
       name: 'Barricade'
       description: 'Increases HP of defensive structures by <lightgreen>50%<r>'
@@ -73,7 +87,7 @@ buffs:
       name: 'Extraction'
       description: 'Increases the Trommel chance of producing precious minerals by <lightgreen>50%<r> <gold>Stackable<r>'
       value: '0.5'
-      stackable: false
+      stackable: true
       parent:
 #
     - id: 'buff_fusion'
@@ -152,79 +166,76 @@ buffs:
       value: '0'
       stackable: false
       parent:
-
-# PYRAMID BUFFS
+# Great Pyramid Buffs
     - id: 'buff_pyramid_cottage_consume'
       name: 'Pyramid Reduced Bread Consumption'
       description: 'Reduces cottage bread consumption by 1/4'
       value: '0.25'
       stackable: false
       parent:
-
+#
     - id: 'buff_pyramid_cottage_bonus'
       name: 'Pyramid Increased Cottage Output'
-      description: 'Increases cottage income by 10%'
-      value: '1.1'
+      description: 'Increases cottage income by 15%'
+      value: '1.15'
       stackable: false
       parent:
-
+#
     - id: 'buff_pyramid_culture'
       name: 'Pyramid Culture Bonus' 
-      description: 'Increases culture output from civilization by 10%'
-      value: '1.1'
+      description: 'Increases culture output from civilization by 25%'
+      value: '1.25'
       stackable: false
       parent:
-
+#
     - id: 'buff_pyramid_leech'
       name: 'Pyramid Leech Culture'
-      description: 'Leeches 1% of the culture output from the nearest civilization.'
-      value: '0.01'
+      description: 'Leeches 5% of the culture output from the nearest civilization.'
+      value: '0.05'
       stackable: false
       parent:
 
     - id: 'debuff_pyramid_leech'
       name: 'Pyramid Leech Culture'
-      description: 'Leeches 1% of your culture. Gives it to the town with the pyramid.'
-      value: '0.01'
+      description: 'Leeches 5% of your culture. Gives it to the town with the pyramid.'
+      value: '0.05'
       stackable: false
       parent:
 # Great library buffs
     - id: 'buff_greatlibrary_extra_beakers'
       name: 'Great Library Extra Beakers'
-      description: 'Grants 10% extra beakers for the civ.'
-      value: '0.1'
+      description: 'Grants 15% extra beakers for the civ.'
+      value: '0.15'
       stackable: false
       parent:
-
+#
     - id: 'buff_greatlibrary_double_tax_beakers'
       name: 'Great Library Double Tax Beakers'
       description: 'Doubles the effectiveness of tax coins spent on beakers'
       value: '2'
       stackable: false
       parent:
-
 # Hanging Gardens buffs
     - id: 'buff_hanging_gardens_growth'
       name: 'Hanging Gardens Growth Bonus'
-      description: 'Grants a 25% bonus to growth rates across the civilization.'
-      value: '0.25'
+      description: 'Grants a 20% bonus to growth rates across the civilization.'
+      value: '0.2'
       stackable: false
       parent:
-
+#
     - id: 'buff_hanging_gardens_regen'
       name: 'Hanging Gardens Regen Bonus'
       description: 'Grants a health regen rate of 1/2 heart per second in town.'
       value: '0.5'
       stackable: false
       parent:
-    
+#
     - id: 'buff_hanging_gardens_additional_growth'
       name: 'Hanging Gardens Additional Growth'
       description: 'Grants an additional 10% growth rate for each Grapes good being used by the Civilization'
       value: '0.1'
       stackable: false
       parent:
-
 # Colossus buffs
     - id: 'debuff_colossus_leech_upkeep'
       name: 'Colossus Leach Upkeep'
@@ -232,18 +243,18 @@ buffs:
       value: '0.02'
       stackable: false
       parent:
-
+#
     - id: 'buff_colossus_reduce_upkeep'
       name: 'Colossus Reduce Upkeep'
       description: 'Reduces upkeep of your town by 25%'
       value: '0.25'
       stackable: false
       parent:
-
+#
     - id: 'buff_colossus_coins_from_culture'
       name: 'Colossus Coins From Culture'
-      description: 'Grants 5 coins per day to the civilization for every culture chunk owned by it.'
-      value: '5'
+      description: 'Grants 4 coins per day to the civilization for every culture chunk owned by it.'
+      value: '4'
       stackable: false
       parent:
 # Notre Dame buffs
@@ -253,40 +264,39 @@ buffs:
       value: '0'
       stackable: false
       parent: 'buff_noanarchy'
-
+#
     - id: 'buff_notre_dame_coins_from_peace'
       name: 'Notre Dame Peace Coins'
-      description: 'Civilization collects coins from each town in each civilization not currently at war.'
+      description: 'Civilization collects 100 coins from each town in each civilization not currently at war.'
       value: '100'
       stackable: false
       parent:
-
+#
     - id: 'buff_notre_dame_extra_war_penalty'
       name: 'Notre Dame No Anarchy'
       description: 'Aggressors pay 2x war penalties when declaring war on this civilization or its allies.'
       value: '2'
       stackable: false
       parent:
-
 # Chichen Itza buffs
     - id: 'buff_chichen_itza_tower_hp'
       name: 'Chichen Itza Tower HP'
-      description: 'Increases HP of towers by 15%'
-      value: '0.15'
+      description: 'Increases HP of towers by 25%'
+      value: '0.25'
       stackable: false
       parent:
-
+#
     - id: 'buff_chichen_itza_regen_rate'
       name: 'Chichen Itza Regen Rate'
       description: 'Increases regen rate of all structures by 2 HP per second.'
       value: '2'
       stackable: false
       parent:
-      
+#
     - id: 'buff_chichen_itza_cp_bonus_hp'
       name: 'Chichen Itza Control Point Bonus HP'
-      description: 'Increase the hitpoints of all Control Points of a town by 10 HP.'
-      value: '10'
+      description: 'Increase the hitpoints of all Control Points of a town by 15 HP.'
+      value: '15'
       stackable: false
       parent:
 #Colosseum Buffs
