--- a/data/techs.yml
+++ b/data/techs.yml
@@ -54,7 +54,7 @@ potions:
      data: 8229
      require_tech: 'tech_alchemy'
 #When the atom developing tech is researched, make these double.
-atom_developing_windmill_buff: 2
+atom_developing_windmill_buff: 2.0
 atom_developing_cottage_buff: 2.0
 atom_developing_mine_buff: 2.0
 atom_developing_lab_buff: 2.0
@@ -242,7 +242,7 @@ techs:
 #==========> Tier 5 <==========#
 #==============================#
    - id: 'tech_writing'
-     name: 'Bronze'
+     name: 'Writing'
      beaker_cost: 30000.0
      cost: 125000.0
      points: 3000
@@ -305,6 +305,13 @@ techs:
      cost: 400000.0
      points: 6250
      require_techs: 'tech_inspection:tech_engineering'
+#
+   - id: 'tech_cargo'
+     name: 'Cargo'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_trading'
 #
    - id: 'tech_malting'
      name: 'Malting'
